# Cloudguard_CLI

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  Cloudguard_mvp.md  Cloudguard_prd.md  Dockerfile  Makefile  README.md  README_SIMULATION.md  RULES.md  SECRETS_SETUP.md  SECURITY.md  backlog.csv  decision_log.json  docker-compose.yml  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  scan.yml
api/: main.py
cloudguard/: __init__.py  __main__.py  cli.py
cloudguard/core/: __init__.py  aws_auth.py  engine.py  models.py  permission_checks.py  rule_loader.py
cloudguard/reporting/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py  table_reporter.py
cloudguard/rules/: __init__.py  apigateway_rules.yaml  cloudtrail_rules.yaml  cloudwatch_rules.yaml  config_rules.yaml  dynamodb_rules.yaml  ebs_rules.yaml  ec2_rules.yaml  ecs_rules.yaml  eks_rules.yaml  elb_rules.yaml  iam_rules.yaml  kms_rules.yaml  lambda_rules.yaml  rds_rules.yaml  s3_rules.yaml  secretsmanager_rules.yaml  sg_rules.yaml  sns_rules.yaml  sqs_rules.yaml  vpc_rules.yaml
cloudguard/scanners/: __init__.py  apigateway_scanner.py  base.py  cloudtrail_scanner.py  cloudwatch_scanner.py  registry.py  (+13 more)
infra/: cloudguard-readonly-policy.json  oidc-trust-policy-template.json  trust-policy-template.json
sample-aws/: cleanup.sh  cloudguard-readonly-policy.json  sandbox.yaml
tests/: conftest.py  test_aws_auth.py  test_cli.py  test_cvss.py  test_iam_scanner.py  test_permission_checks.py  test_rule_loader.py  test_s3_scanner.py
(+6 files in other folders)
