[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudguard"
version = "0.1.0"
description = "Cloud Security Posture Management (CSPM) tool for detecting AWS misconfigurations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CloudGuard Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto[all]>=5.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "boto3-stubs[essential]>=1.34.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
cloudguard = "cloudguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cloudguard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["cloudguard"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
